--- a/examples/hellohttp/go/BUILD
+++ b/examples/hellohttp/go/BUILD
@@ -16,6 +16,7 @@ k8s_deploy(
         "hello-http-image": ":server",
     },
     template = "//examples/hellohttp:deployment.yaml",
+    rollout_status = True,
 )
 
 load("@k8s_service//:defaults.bzl", "k8s_service")
